<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WayStoryApp</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Bagikan cerita keseruan belajar melalui Website Dicoding Academy disini</string>
    <string name="title_welcome_page">Selamat datang Dicoding Wariors!!</string>
    <string name="title_signup_page">Silahkan Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Silahkan login terlebih dahulu</string>
    <string name="message_login_desc">Sudah siap membagikan cerita seru mu disini?</string>
    <string name="title_greeting_page">Hello Dicoding Wariors!!</string>
    <string name="belum_ada_akun">Belum mempunyai akun?</string>
    <string name="sudah_ada_akun">Sudah mempunyai akun?</string>
    <string name="daftar_akun">Daftar disini</string>
    <string name="masuk_akun">Login disini</string>


    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="story_description">Ceitakan kisahmu</string>
    <string name="action_upload_story">Upload Your Story</string>

    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Datang Dicoding Wariors!!</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="storry_added">Cerita Berhasil Disimpan</string>

    <string name="dialog_error">Oops sepertinya ada yang salah</string>
    <string name="error_empty_email">Masukkan Email Anda</string>
    <string name="error_empty_password">Masukkan Password Anda</string>
    <string name="error_short_password">Password harus memiliki panjang minimal 8 karakter</string>
    <string name="message_incorrect_auth">Email atau password anda salah</string>
    <string name="message_unknown_state">Status Eror</string>
    <string name="error_empty_name">Masukkan Nama Anda</string>
    <string name="error_invalid_email">Email anda tidak valid!</string>
    <string name="email_must_be_valid_email">Email harus valid</string>
    <string name="success">User created</string>
    <string name="message_register_success">Daftar Berhasil</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="email_sudah_ada">Email Sudah digunakan</string>

    <string name="berhasil">success</string>
    <string name="berhasil_login">Berhasil Login</string>
    <string name="user_not_found">User not found</string>
    <string name="invalid_password">Invalid password</string>
    <string name="email_dan_password_tidak_terdaftar">Email Dan Password Tidak Terdaftar</string>
    <string name="password_salah">Password Salah</string>
    <string name="title_activity_maps">MapsActivity</string>

<!--    maps-->
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">coba lagi</string>

</resources>